proc-macros/tests/ui/incorrect/method/method_unexpected_field.stderr
error: Unknown argument `magic`, expected one of: `aliases`, `blocking`, `name`, `param_kind`, `with_context`
 --> $DIR/method_unexpected_field.rs:6:25
  |
6 |     #[method(name = "foo", magic = false)]
  |                            ^^^^^
